--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Bootstrap Demo</title>
   </head>
   <body>
-    <h3>Back to the roots</h3>
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+    <section class="container p-4">
+      <div class="row gap-5 mx-auto border">
+        <div class="box col-3">1</div>
+        <div class="box col-3">2</div>
+        <div class="box col-3">3</div>
+        <div class="box col-3">4</div>
+      </div>
+    </section>
 
     <!-- bootstrap cdn -->
     <script
