--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <button type="submit" class="btn btn-primary">Submit</button>
 
     <section class="container p-4">
-      <div class="row gap-5 mx-auto border">
-        <div class="box col-3">1</div>
-        <div class="box col-3">2</div>
-        <div class="box col-3">3</div>
-        <div class="box col-3">4</div>
+      <div class="row gap-5 mx-auto">
+        <div class="box col">1</div>
+        <div class="box col">2</div>
+        <div class="box col">3</div>
+        <div class="box col">4</div>
       </div>
     </section>
 
