raw css and js animation explored

--- a/index.html
+++ b/index.html
@@ -13,14 +13,53 @@
     <title>Bootstrap Demo</title>
   </head>
   <body>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="list--container">
+      <button type="submit" id="open-btn" class="btn btn-primary">open</button>
 
-    <section class="container p-4">
-      <div class="row gap-5 mx-auto">
-        <div class="box col">1</div>
-        <div class="box col">2</div>
-        <div class="box col">3</div>
-        <div class="box col">4</div>
+      <div id="dropmenu" class="dropdown-menu-custom">
+        <ul>
+          <li>Home</li>
+          <li>Home</li>
+          <li>Home</li>
+          <li>Home</li>
+          <li>Menu</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="container text-center">
+      <div class="row justify-content-start">
+        <div class="col-8">One of two columns</div>
+        <div class="col-4">One of two columns</div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-4">One of two columns</div>
+        <div class="col-4">One of two columns</div>
+      </div>
+      <div class="row justify-content-end">
+        <div class="col-4">One of two columns</div>
+        <div class="col-4">One of two columns</div>
+      </div>
+      <div class="row justify-content-around">
+        <div class="col-4">One of two columns</div>
+        <div class="col-4">One of two columns</div>
+      </div>
+      <div class="row justify-content-between">
+        <div class="col-4">One of two columns</div>
+        <div class="col-4">One of two columns</div>
+      </div>
+      <div class="row justify-content-evenly">
+        <div class="col-4">One of two columns</div>
+        <div class="col-4">One of two columns</div>
+      </div>
+    </div>
+
+    <section class="container">
+      <div class="row gx-4">
+        <div class="box col-lg-6">1</div>
+        <div class="box col-lg-2">2</div>
+        <div class="box col-lg-2">3</div>
+        <div class="box col-lg-2">4</div>
       </div>
     </section>
 
