--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   </head>
   <body>
-    <div class="list--container">
+    <!-- <div class="list--container">
       <button type="submit" id="open-btn" class="btn btn-primary">open</button>
 
       <div id="dropmenu" class="dropdown-menu-custom">
@@ -65,15 +65,21 @@
         <div class="box col-lg-2">3</div>
         <div class="box col-lg-2">4</div>
       </div>
-    </section>
+    </section> -->
 
     <!-- practice section -->
-    <div class="layout--container row rounded-3">
+    <!-- <div class="layout--container row rounded-3">
       <div class="col-12 col-md-6 col-lg-7 rounded-3">left
         <button id="hide-btn" style="display: block;" >hide me</button>
       </div>
       <div id="right-div" class="col-12 col-md-6 col-lg-5 rounded-3">right</div>
-    </div>
+    </div> -->
+
+
+    <!-- text reveal section  -->
+    <main>
+      <h1 id="main--text" >Mashfikur Rahman</h1>
+    </main>
 
     <!-- bootstrap cdn -->
     <script
@@ -82,7 +88,13 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- gsap animation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+
     <!-- custom script -->
     <script src="./assets/js/main.js"></script>
+
+    
   </body>
 </html>
