--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
       <h1 id="main--text" >Mashfikur Rahman</h1>
     </main>
 
+    <div id="smooth--wrapper">
+
+      <div id="smooth--content" >
+
+
+        <div class="box--new">1</div>
+        <div class="box--new">2</div>
+        <div class="box--new">3</div>
+
+      </div>
+
+    </div>
+
     <!-- bootstrap cdn -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
